force-app/main/default/objects/LLC_BI__Transaction_Request__c/fields/LLC_BI__Additional_Federal_Withholding_Pct__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Additional_Federal_Withholding_Pct__c</fullName>
    <description>This field is optional. The additional percentage (over and above the 10% federal income tax withholding) that the IRA owner will have withheld from the distribution.</description>
    <inlineHelpText>The additional percentage (over and above the 10% Federal income tax withholding) that the IRA owner will have withheld from the distribution.</inlineHelpText>
    <label>Additional Federal Withholding Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>