force-app/main/default/objects/LLC_BI__Transaction_Request__c/fields/LLC_BI__Additional_Federal_Withholdings__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Additional_Federal_Withholdings__c</fullName>
    <description>This field is optional. Where an initial 10% federal income tax withholding is already presumed to apply to the transaction, this is the additional discretionary dollar amount, if any, over and above the baseline 10%, that the IRA plan owner or distribution recipient elects to have withheld from the distribution.</description>
    <inlineHelpText>The additional discretionary dollar amount of federal withholdings, over and above the baseline 10%, to the IRA plan.</inlineHelpText>
    <label>Additional Federal Withholdings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>