force-app/main/default/objects/LLC_BI__Transaction_Request__c/fields/LLC_BI__Amount_Requested__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Amount_Requested__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>This field is optional. It is the total amount requested for this transaction request.</description>
    <label>Amount Requested</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>