force-app/main/default/objects/LLC_BI__Transaction_Request__c/fields/LLC_BI__CESA_Distribution_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__CESA_Distribution_Type__c</fullName>
    <description>This field is optional. It is the picklist that specifies the type of distribution for a Coverdell Education Savings Account (CESA).</description>
    <inlineHelpText>Specifies the type of distribution for a Coverdell Education Savings Account (CESA).</inlineHelpText>
    <label>CESA Distribution Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Distributions - Non Transfer</fullName>
            </value>
            <value>
                <fullName>Distributions - Transfer to CESA of same Designated Beneficiary</fullName>
            </value>
            <value>
                <fullName>Distributions - Transfer to CESA of new qualified designated beneficiary</fullName>
            </value>
            <value>
                <fullName>Distributions - Transfer to former spouse&apos;s CESA due to divorce or legal separation</fullName>
            </value>
            <value>
                <fullName>Death</fullName>
            </value>
            <value>
                <fullName>Correction of Excess Contribution in same year as excess contribution</fullName>
            </value>
            <value>
                <fullName>Correction of Excess Contribution in year after excess contribution but by May 31</fullName>
            </value>
            <value>
                <fullName>Correction of Excess Contribution after May 31 of the tax year after excess contribution</fullName>
            </value>
            <value>
                <fullName>Disability</fullName>
            </value>
            <value>
                <fullName>Prohibited Transaction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>