force-app/main/default/objects/LLC_BI__Transaction_Request__c/fields/LLC_BI__Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Completed_Date__c</fullName>
    <description>This field is optional. It is the date and time that this transaction request was completed.</description>
    <label>Completed Date</label>
    <type>DateTime</type>
</CustomField>