force-app/main/default/objects/LLC_BI__Transaction_Request__c/fields/LLC_BI__Contribution_Plus_Earnings_Amount__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Contribution_Plus_Earnings_Amount__c</fullName>
    <description>This field is optional. It is the amount of contribution plus earnings.</description>
    <inlineHelpText>The amount of contribution plus earnings.</inlineHelpText>
    <label>Contribution Plus Earnings Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>