force-app/main/default/objects/LLC_BI__Transaction_Request__c/fields/LLC_BI__Delivery_Payment_Options__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Delivery_Payment_Options__c</fullName>
    <description>This field is optional. It is a picklist that describes the possible medium for the payment/transfer requested.</description>
    <inlineHelpText>Description of possible medium(s) for the payment/transfer requested.</inlineHelpText>
    <label>Delivery Payment Options</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Check payable to or certificate registration in the name of</fullName>
            </value>
            <value>
                <fullName>Check payable to</fullName>
            </value>
            <value>
                <fullName>Check or electronic fund transfer payable to</fullName>
            </value>
            <value>
                <fullName>Certificate registration in the name of</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>