force-app/main/default/objects/LLC_BI__Transaction_Request__c/fields/LLC_BI__Deposit__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Deposit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is optional. This field is a lookup to the deposit associated to the transaction request.</description>
    <label>Deposit</label>
    <referenceTo>LLC_BI__Deposit__c</referenceTo>
    <relationshipLabel>Transaction Request</relationshipLabel>
    <relationshipName>Transaction_Request</relationshipName>
    <type>Lookup</type>
</CustomField>