force-app/main/default/objects/LLC_BI__Transaction_Request__c/fields/LLC_BI__Deposit_Earnings_Amount__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Deposit_Earnings_Amount__c</fullName>
    <description>This field is optional. It is the deposit earnings amount of the CESA contribution.</description>
    <inlineHelpText>The deposit earnings amount of the (CESA) contribution.</inlineHelpText>
    <label>Deposit Earnings Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>