force-app/main/default/objects/LLC_BI__Transaction_Request__c/fields/LLC_BI__Disbursement_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Disbursement_Payment_Method__c</fullName>
    <description>Users manually populate this optional picklist to indicate the payment method for the disbursement. By default, this field is blank.</description>
    <inlineHelpText>Select the payment method for the disbursement.</inlineHelpText>
    <label>Disbursement Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Retail Account</fullName>
            </value>
            <value>
                <fullName>Draft/Check</fullName>
            </value>
            <value>
                <fullName>Wire Transfer</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>