force-app/main/default/objects/LLC_BI__Transaction_Request__c/fields/LLC_BI__Distribution_Amount__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Distribution_Amount__c</fullName>
    <description>This field is optional. It is the amount of the total distribution.</description>
    <inlineHelpText>The amount of the total distribution.</inlineHelpText>
    <label>Distribution Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>