force-app/main/default/objects/LLC_BI__Transaction_Request__c/fields/LLC_BI__Distribution_Earnings_Amount__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Distribution_Earnings_Amount__c</fullName>
    <description>This field is optional. For Coverdell Education Savings Account (CESA) distributions, this is the earnings for the distribution.</description>
    <inlineHelpText>For Coverdell Education Savings Account (CESA) distributions this is the earnings for the distribution.</inlineHelpText>
    <label>Distribution Earnings Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>