force-app/main/default/objects/LLC_BI__Transaction_Request__c/fields/LLC_BI__Distribution_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Distribution_Payment_Method__c</fullName>
    <description>This field is optional. It is the picklist that specifies the payment method applicable to the distribution.</description>
    <inlineHelpText>Specifies the payment method applicable to the distribution.</inlineHelpText>
    <label>Distribution Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mail Check</fullName>
            </value>
            <value>
                <fullName>Deposit into account with this financial organization</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>