force-app/main/default/objects/LLC_BI__Transaction_Request__c/fields/LLC_BI__Distribution_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Distribution_Subtotal__c</fullName>
    <description>This field is optional. It is the externally calculated subtotal dollar amount to print in the payment detail table on the distribution or election form.</description>
    <inlineHelpText>The externally calculated subtotal dollar amount to print in the payment detail table on the distribution or election form.</inlineHelpText>
    <label>Distribution Subtotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>