force-app/main/default/objects/LLC_BI__Transaction_Request__c/fields/LLC_BI__Election_Of_Payment_Attached_Indicator__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Election_Of_Payment_Attached_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is optional. If true, an election of payment already exists and a copy of the prior election is attached.</description>
    <inlineHelpText>If true an election of payment already exists and a copy of the prior election is attached.</inlineHelpText>
    <label>Election of Payment Attached Indicator</label>
    <type>Checkbox</type>
</CustomField>