force-app/main/default/objects/LLC_BI__Transaction_Request__c/fields/LLC_BI__Election_Of_Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Election_Of_Payment_Type__c</fullName>
    <description>This field is optional. It is a picklist that specifies the type of payment elected by the beneficiary or, in the case of a beneficiary IRA, the type of payment elected by the owner.</description>
    <inlineHelpText>Specifies the type of payment elected by the beneficiary or in the case of a beneficiary IRA the type of payment elected by the owner.</inlineHelpText>
    <label>Election of Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Treat As Own</fullName>
            </value>
            <value>
                <fullName>Five Year Rule</fullName>
            </value>
            <value>
                <fullName>Single Life Expectancy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>