force-app/main/default/objects/LLC_BI__Transaction_Request__c/fields/LLC_BI__Federal_Withholding_Amount__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Federal_Withholding_Amount__c</fullName>
    <description>This field is optional. It is the net, externally-calculated dollar amount of federal withholding to print on the distribution or election form, including the standard 10%, as applicable, applied to the distribution subtotal, plus any discretionary additional dollar amount or percentage.</description>
    <inlineHelpText>The net dollar amount of Federal Withholding, including the standard 10% applied to the distribution subtotal</inlineHelpText>
    <label>Federal Withholding Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>