force-app/main/default/objects/LLC_BI__Transaction_Request__c/fields/LLC_BI__Investment_Delivery_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Investment_Delivery_Type__c</fullName>
    <description>This field is optional. It is a picklist that specifies the way in which the requested investment should be sent.</description>
    <inlineHelpText>Specifies the way in which the requested investment should be sent.</inlineHelpText>
    <label>Investment Delivery Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cash Proceeds</fullName>
            </value>
            <value>
                <fullName>In Kind</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>