force-app/main/default/objects/LLC_BI__Transaction_Request__c/fields/LLC_BI__Investment_Is_Non_Deposit__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Investment_Is_Non_Deposit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is optional. If true, this is a non-deposit investment.</description>
    <inlineHelpText>If true this is a non-deposit investment.</inlineHelpText>
    <label>Investment is Non-Deposit</label>
    <type>Checkbox</type>
</CustomField>