force-app/main/default/objects/LLC_BI__Transaction_Request__c/fields/LLC_BI__IRA_10_Withholdings_Election__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__IRA_10_Withholdings_Election__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is optional. If true, the IRA owner elects to have 10% federal income tax withheld from their IRA distribution.</description>
    <inlineHelpText>If true the IRA owner elects to have 10% Federal income tax withheld from their IRA distribution.</inlineHelpText>
    <label>IRA 10% Withholdings Election</label>
    <type>Checkbox</type>
</CustomField>