force-app/main/default/objects/LLC_BI__Transaction_Request__c/fields/LLC_BI__IRA_Addtl_Federal_Withholdings_Pct__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__IRA_Addtl_Federal_Withholdings_Pct__c</fullName>
    <description>This field is optional. It is the additional percentage (over and above the 10% federal income tax withholding) that the IRA owner will have withheld from each distribution.</description>
    <inlineHelpText>The additional percentage (over and above the 10% Federal income tax withholding) that the IRA owner will have withheld from each distribution.</inlineHelpText>
    <label>IRA Additional Federal Withholdings Pct</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>