force-app/main/default/objects/LLC_BI__Transaction_Request__c/fields/LLC_BI__IRA_Distribution_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__IRA_Distribution_Date__c</fullName>
    <description>This field is optional. It is the date of the IRA distribution.</description>
    <inlineHelpText>The date of the IRA distribution.</inlineHelpText>
    <label>IRA Distribution Date</label>
    <type>Date</type>
</CustomField>