force-app/main/default/objects/LLC_BI__Transaction_Request__c/fields/LLC_BI__IRA_State_Withholdings_Percent__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__IRA_State_Withholdings_Percent__c</fullName>
    <description>This field is optional. It is the percentage that the IRA owner elects to have withheld from their IRA distribution for state income tax purposes.</description>
    <inlineHelpText>The percentage that the IRA owner elects to have withheld from their IRA distribution for state income tax purposes.</inlineHelpText>
    <label>IRA State Withholdings Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>