force-app/main/default/objects/LLC_BI__Transaction_Request__c/fields/LLC_BI__IRS_Levy_Indicator__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__IRS_Levy_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is optional. If true, the distribution is related to an IRS levy. This is only applicable to Traditional IRAs, SIMPLE IRAs, and Health Savings Accounts (HSAs). The other types of IRAs have a separate distribution type that are used for IRS levies.</description>
    <inlineHelpText>If true the distribution is related to an IRS levy. This is only applicable to Traditional IRAs SIMPLE IRAs and Health Savings Accounts (HSAs); the other types of IRA have a separate distribution type that would be used for IRS levies.</inlineHelpText>
    <label>IRS Levy Indicator</label>
    <type>Checkbox</type>
</CustomField>