force-app/main/default/objects/LLC_BI__Transaction_Request__c/fields/LLC_BI__Is_Approved__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Approved__c</fullName>
    <description>--DEPRECATED-- Determines if the status of the request is approved.</description>
    <formula>ISPICKVAL(LLC_BI__Status__c, &quot;Approved&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>-D Is Approved</label>
    <type>Checkbox</type>
</CustomField>