force-app/main/default/objects/LLC_BI__Transaction_Request__c/fields/LLC_BI__Is_Disbursement_Request__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Disbursement_Request__c</fullName>
    <description>This field is optional. It determines if the transaction request type is disbursement.</description>
    <formula>ISPICKVAL(LLC_BI__Type__c, &quot;Disbursement&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Disbursement Request</label>
    <type>Checkbox</type>
</CustomField>