force-app/main/default/objects/LLC_BI__Transaction_Request__c/fields/LLC_BI__Loan__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Loan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is optional and can be auto-populated. It creates a lookup to the loan related to this transaction request.</description>
    <label>Loan</label>
    <referenceTo>LLC_BI__Loan__c</referenceTo>
    <relationshipLabel>Transaction Requests</relationshipLabel>
    <relationshipName>Transaction_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>